[package]
name = "vpn-aggregator"
version = "1.3.0"
edition = "2021"
description = "Subscription config aggregator with TCP health checks (egui desktop app)"
license = "MIT"
repository = "https://github.com/renkagod/vpn-aggregator"
authors = ["renkagod"]

[dependencies]
eframe = "0.31"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
base64 = "0.22"
arboard = "3"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time"] }
url = "2.5"
serde_json = "1.0"
rfd = "0.15"
uuid = { version = "1.8", features = ["v4"] }
image = "0.25"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
